# texting

./: Cargo.toml  README.md
src/: lib.rs
src/_capitalize/: mod.rs
src/bracket/: mod.rs
src/chars/: mod.rs
src/charset/: mod.rs
src/concat/: mod.rs
src/enums/: mod.rs
src/lange/: mod.rs
src/lines/: mod.rs
src/str_value/: mod.rs
src/sub/: mod.rs
tests/: integration_test.rs
tests/alpha/: last_substring_test.rs  mod.rs
