[package]
name = "texting"
description = "string helpers"
keywords = ["string", "str", "text", "language-processing"]
version = "0.0.6"
authors = ["Hoyeung <hoyeungw@outlook.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = ">=1.4.0"
regex = ">=1.5"
vte = ">=0.10.0"

[dev-dependencies]
#strum_macros = ">=0.21.1"
veho = ">=0.0.19"

